--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<section class="intro">
 						<header>
 							<h1>Event Medical Radio Solutions</h1>
-							<p>Welcome to Event Medical Radio Solutions, you're trusted partner in event critical communications'</p>
+							<p>Welcome to Event Medical Radio Solutions, your trusted partner in event critical communications.'</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -33,7 +33,8 @@
 							<h2>Services</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>Radio provision</strong> - We can provide a range of radios for your event, including mobile, handheld and fixed.</p>
+							<p><strong>End to end encryption</strong> - All our radios come with end to end encryption as standard, with a dedicated private key for each client to ensure data security.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -41,19 +42,11 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Why choose us?</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
-							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
-							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>Run by a HCPC registered Paramedic, we understand the unique needs of medical teams at events, and how critical communication is key.</p>
+							<p>Experts in our field, there is no project too big or too small. From small responder teams through to multi-agency operations, we are the perfect partner for your event.</p>
 						</div>
 					</section>
 
