--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/pic01.JPG" alt="" /></span>
 						</div>
 					</section>
 
@@ -35,7 +35,7 @@
 						<div class="content">
 							<p><strong>Radio provision</strong> - We can provide a range of radios for your event, including mobile, handheld and fixed.</p>
 							<p><strong>End to end encryption</strong> - All our radios come with end to end encryption as standard, with a dedicated private key for each client to ensure data security.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image main"><img src="images/pic02.JPG" alt="" /></span>
 						</div>
 					</section>
 
@@ -66,10 +66,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/01.JPG" class="landscape"><img src="images/gallery/thumbs/01.JPG" alt="" /></a>
+											<a href="images/gallery/fulls/02.JPG"><img src="images/gallery/thumbs/02.JPG" alt="" /></a>
+											<a href="images/gallery/fulls/03.JPG"><img src="images/gallery/thumbs/03.JPG" alt="" /></a>
+											<a href="images/gallery/fulls/04.JPG" class="landscape"><img src="images/gallery/thumbs/04.JPG" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -82,9 +82,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/05.JPG" class="landscape"><img src="images/gallery/thumbs/05.JPG" alt="" /></a>
+											<a href="images/gallery/fulls/06.JPG"><img src="images/gallery/thumbs/06.JPG" alt="" /></a>
+											<a href="images/gallery/fulls/07.JPG"><img src="images/gallery/thumbs/07.JPG" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -97,9 +97,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/08.JPG" class="portrait"><img src="images/gallery/thumbs/08.JPG" alt="" /></a>
+											<a href="images/gallery/fulls/09.JPG" class="portrait"><img src="images/gallery/thumbs/09.JPG" alt="" /></a>
+											<a href="images/gallery/fulls/10.JPG" class="landscape"><img src="images/gallery/thumbs/10.JPG" alt="" /></a>
 										</div>
 									</div>
 								</section>
