--- a/index.html
+++ b/index.html
@@ -50,76 +50,8 @@
 						</div>
 					</section>
 
-				<!-- Section -->
-					<section>
-						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
-						</header>
-						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/01.JPG" class="landscape"><img src="images/gallery/thumbs/01.JPG" alt="" /></a>
-											<a href="images/gallery/fulls/02.JPG"><img src="images/gallery/thumbs/02.JPG" alt="" /></a>
-											<a href="images/gallery/fulls/03.JPG"><img src="images/gallery/thumbs/03.JPG" alt="" /></a>
-											<a href="images/gallery/fulls/04.JPG" class="landscape"><img src="images/gallery/thumbs/04.JPG" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/05.JPG" class="landscape"><img src="images/gallery/thumbs/05.JPG" alt="" /></a>
-											<a href="images/gallery/fulls/06.JPG"><img src="images/gallery/thumbs/06.JPG" alt="" /></a>
-											<a href="images/gallery/fulls/07.JPG"><img src="images/gallery/thumbs/07.JPG" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/08.JPG" class="portrait"><img src="images/gallery/thumbs/08.JPG" alt="" /></a>
-											<a href="images/gallery/fulls/09.JPG" class="portrait"><img src="images/gallery/thumbs/09.JPG" alt="" /></a>
-											<a href="images/gallery/fulls/10.JPG" class="landscape"><img src="images/gallery/thumbs/10.JPG" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-						</div>
-					</section>
-
-				<!-- Section -->
-					<section>
-						<header>
-							<h2>Duis sed adpiscing veroeros amet</h2>
-						</header>
-						<div class="content">
-							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
-							<ul class="actions">
-								<li><a href="#" class="button primary large">Get Started</a></li>
-								<li><a href="#" class="button large">Learn More</a></li>
-							</ul>
-						</div>
-					</section>
+	
+		
 
 				<!-- Elements -->
 				<!--
@@ -395,7 +327,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
+			
 							<form>
 								<div class="fields">
 									<div class="field half">
@@ -417,12 +349,10 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@eventmedicalradiosolutions.co.uk</a>
+									<a href="mailto:information@eventmedicalradiosolutions.co.uk">information@eventmedicalradiosolutions.co.uk</a>
 								</li>
-								<li>
-									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
-								</li>
+					
+							
 								<li>
 									<h3>Address</h3>
 									<span>United Kingdom</span>
@@ -430,12 +360,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
 									</ul>
 								</li>
 							</ul>
