--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 						<div class="content">
 							<p><strong>Radio provision</strong> - We can provide a range of radios for your event, including mobile, handheld and fixed.</p>
 							<p><strong>End to end encryption</strong> - All our radios come with end to end encryption as standard, with a dedicated private key for each client to ensure data security.</p>
+<p><strong>Audio and GPS recording</strong> - Both audio and GPS data is securely stored on-site, and immediately accessible in case of incidents.</p>
+<p><strong>Emergency button</strong> - Each radio has a red 'emergency button', which notifies a manager or the control room of a serious incident.</p>
 							<span class="image main"><img src="images/pic02.JPG" alt="" /></span>
 						</div>
 					</section>
@@ -360,7 +362,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.facebook.com/share/1AB4MuVCtB/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									</ul>
 								</li>
 							</ul>
