--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
+							<img src="images/logo.png" alt="Logo" />
 							<h1>Event Medical Radio Solutions</h1>
 							<p>Welcome to Event Medical Radio Solutions, your trusted partner in event critical communications.'</p>
 							<ul class="actions">
