Remove form from index.html

--- a/index.html
+++ b/index.html
@@ -330,25 +330,6 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						<header>
 							<h2>Get in touch</h2>
 						</header>
-						<div class="content">
-			
-							<form>
-								<div class="fields">
-									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="button primary" /></li>
-								</ul>
-							</form>
-						</div>
 						<footer>
 							<ul class="items">
 								<li>
@@ -362,7 +343,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<span>United Kingdom</span>
 								</li>
 								<li>
-									<h3>Elsewhere</h3>
+									<h3>Social media</h3>
 									<ul class="icons">
 										<li><a href="https://www.facebook.com/share/1AB4MuVCtB/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									</ul>
