Added price list

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
 							<p>Experts in our field, there is no project too big or too small. From small responder teams through to multi-agency operations, we are the perfect partner for your event.</p>
 						</div>
 					</section>
+					<section>
+						<header>
+							<h2>Pricing</h2>
+						</header>
+						<div class="content">
+							<p>Our pricing is based on the number of radios required, with minimum prices shown below. Please contact us for discounts when ordering more than 5 radios or for longer than 2 weeks.</p>
+							<span class="image main"><img src="images/PL1.png" alt="" /></span>
+							<span class="image main"><img src="images/PL2.png" alt="" /></span>
+						</div>
+						</section>
 
 	
 		
