New style, and separate pages

--- a/pricing.html
+++ b/pricing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>EMRS - Homepage</title>
+		<title>EMRS - Pricing</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Event Medical Radio Solutions" />
@@ -9,8 +9,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	</head>
-	
-	<body class="is-preload">
+    <body class="is-preload">
 		<div id="navbar">
 			<a href="/index.html">Home</a>
 			<a href="/services.html">Services</a>
@@ -21,32 +20,21 @@
 						<header>
 							<img src="images/Logo no text clear.png" alt="Logo" id="logo"/>
 							<h1>Event Medical Radio Solutions</h1>
-							<p>Welcome to Event Medical Radio Solutions, your trusted partner in event critical communications.</p>
-							<ul class="actions">
-								<li><a href="#WhyUs" class="arrow scrolly"><span class="label">Next</span></a></li>
-							</ul>
 						</header>
 						<div class="content">
-<span class="image fill" data-position="top"><img src="images/pic01.JPG" alt="" /></span>
+                            <br>
+                            <br>
+                            <h1>Pricing</h1>
+							<a href="/downloads/Price card.pdf"><span class="image main"><img src="images/PL1.png" alt="" /></span></a>
+							<a href="/downloads/Price card.pdf"><span class="image main"><img src="images/PL2.png" alt="" /></span></a>
+                            <p>Our pricing is based on the number of radios required, with minimum prices shown below. Please contact us for discounts when ordering more than 5 radios or for longer than 2 weeks.</p>
 						</div>
-					</section>
+                        <div class="main">
+                            
+						</section>
 					<section>
 						<header>
-							<h2 id="WhyUs">Why choose us?</h2>
-							<ul class="actions">
-								<li><a href="#Contact" class="arrow scrolly"><span class="label">Next</span></a></li>
-							</ul>
-						</header>
-						<div class="content">
-							<p>Run by a HCPC registered Paramedic, we understand the unique needs of medical teams at events, and how critical communication is key.</p>
-							<p>Experts in our field, there is no project too big or too small. From small responder teams through to multi-agency operations, we are the perfect partner for your event.</p>
-						
-						</div>
-
-					</section>
-					<section>
-						<header>
-							<h2 id="Contact">Get in touch</h2>
+							<h2>Get in touch</h2>
 						</header>
 						<footer>
 							<ul class="items">
