--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>EMRS - Homepage</title>
+		<title>EMRS - Services</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Event Medical Radio Solutions" />
@@ -9,8 +9,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	</head>
-	
-	<body class="is-preload">
+    <body class="is-preload">
 		<div id="navbar">
 			<a href="/index.html">Home</a>
 			<a href="/services.html">Services</a>
@@ -21,29 +20,23 @@
 						<header>
 							<img src="images/Logo no text clear.png" alt="Logo" id="logo"/>
 							<h1>Event Medical Radio Solutions</h1>
-							<p>Welcome to Event Medical Radio Solutions, your trusted partner in event critical communications.</p>
-							<ul class="actions">
-								<li><a href="#WhyUs" class="arrow scrolly"><span class="label">Next</span></a></li>
-							</ul>
-						</header>
-						<div class="content">
-<span class="image fill" data-position="top"><img src="images/pic01.JPG" alt="" /></span>
-						</div>
-					</section>
-					<section>
-						<header>
-							<h2 id="WhyUs">Why choose us?</h2>
-							<ul class="actions">
-								<li><a href="#Contact" class="arrow scrolly"><span class="label">Next</span></a></li>
-							</ul>
-						</header>
-						<div class="content">
-							<p>Run by a HCPC registered Paramedic, we understand the unique needs of medical teams at events, and how critical communication is key.</p>
-							<p>Experts in our field, there is no project too big or too small. From small responder teams through to multi-agency operations, we are the perfect partner for your event.</p>
 						
+						</header>
+						<div class="content">
+                            <br>
+                            <br>
+                            <h1>Services</h1>
+                            <div class="content">
+                                <p><strong>Radio provision</strong> - We can provide a range of radios for your event, including mobile, handheld and fixed.</p>
+                                <p><strong>End to end encryption</strong> - All our radios come with end to end encryption as standard, with a dedicated private key for each client to ensure data security.</p>
+    <p><strong>Audio and GPS recording</strong> - Both audio and GPS data is securely stored on-site, and immediately accessible in case of incidents.</p>
+    <p><strong>Emergency button</strong> - Each radio has a red 'emergency button', which notifies a manager or the control room of a serious incident.</p>
+                                <span class="image main"><img src="images/pic02.JPG" alt="" /></span>
+                            </div>
 						</div>
-
-					</section>
+                        <div class="main">
+                            
+						</section>
 					<section>
 						<header>
 							<h2 id="Contact">Get in touch</h2>
