--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 										<li><a href="https://www.facebook.com/share/1AB4MuVCtB/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									</ul>
 								</li>
+								<li>
+									<iframe src='https://outlook.office.com/owa/calendar/Meeting@eventmedicalradiosolutions.co.uk/bookings/' width='100%' height='600' scrolling='yes' style='border:0'></iframe>
+								</li>
 							</ul>
 						</footer>
 					</section>
