--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 									</ul>
 								</li>
 								<li>
-									<iframe src='https://outlook.office.com/owa/calendar/Meeting@eventmedicalradiosolutions.co.uk/bookings/' width='100%' height='600' scrolling='yes' style='border:0'></iframe>
+									<h3>Book an appointment</h3>
+									<a href='https://outlook.office.com/owa/calendar/Meeting@eventmedicalradiosolutions.co.uk/bookings/'>Schedule online</a>
 								</li>
 							</ul>
 						</footer>
