--- a/pricing.html
+++ b/pricing.html
@@ -24,10 +24,10 @@
 						<div class="content">
                             <br>
                             <br>
-                            <h1>Pricing</h1>
+                            <h1>Dry hire pricing</h1>
 							<a href="/downloads/Price card.pdf"><span class="image main"><img src="images/PL1.png" alt="" /></span></a>
 							<a href="/downloads/Price card.pdf"><span class="image main"><img src="images/PL2.png" alt="" /></span></a>
-                            <p>Our pricing is based on the number of radios required, with minimum prices shown below. Please contact us for discounts when ordering more than 5 radios or for longer than 2 weeks.</p>
+                            <p>Our pricing is based on the number of radios required, with minimum prices shown above for basic dry hire. Please contact us for discounts when ordering more than 5 radios or for longer than 2 weeks.</p>
 						</div>
                         <div class="main">
                             
