--- a/services.html
+++ b/services.html
@@ -26,18 +26,30 @@
                             <br>
                             <br>
                             <h1>Services</h1>
-                            <div class="content">
-                                <p><strong>Radio provision</strong> - We can provide a range of radios for your event, including mobile, handheld and fixed.</p>
+
+								<h2>- Radio hire</h2>
+								<p>We can provide pre-programmed radios, repeaters and accessories to intergrate with your existing network, or as a standalone system. These include mobile, handheld and fixed radios.</p>
+								<h2>- Consultancy</h2>
+								<p>Our team of experts can provide advice on the best solution for your event, whether it is a small team, a large event or a multi-agency operation.</p>
+								<h2>- Turnkey solutions</h2>
+								<p>We can provide a complete turnkey solution for your event from start to finish, as well as provide long-term rental and support.</p>
+								
+								<br><br>
+								<h2>What we offer</h2>
+								<p><strong>Network</strong> - Our network of radios is secure, reliable and easy to manage.</p>
                                 <p><strong>End to end encryption</strong> - All our radios come with end to end encryption as standard, with a dedicated private key for each client to ensure data security.</p>
     <p><strong>Audio and GPS recording</strong> - Both audio and GPS data is securely stored on-site, and immediately accessible in case of incidents.</p>
     <p><strong>Emergency button</strong> - Each radio has a red 'emergency button', which notifies a manager or the control room of a serious incident.</p>
-                                <span class="image main"><img src="images/pic02.JPG" alt="" /></span>
-                            </div>
+
+	<br><br>
+	<h2>Interested?</h2>
+	<p>If you are interested in our services, please contact us on <a href="mailto:information@eventmedicalradiosolutions.co.uk">information@eventmedicalradiosolutions.co.uk</a></p>
+
 						</div>
                         <div class="main">
                             
 						</section>
-					<section>
+					<section style="width:50%">
 						<header>
 							<h2 id="Contact">Get in touch</h2>
 						</header>
