Updated contact details

--- a/services.html
+++ b/services.html
@@ -60,6 +60,17 @@
 									<a href="mailto:information@eventmedicalradiosolutions.co.uk">information@eventmedicalradiosolutions.co.uk</a>
 								</li>
 								<li>
+                                    <h3>Phone</h3>
+                                    <a href="tel:01217268229">01217268229</a>
+                                </li>
+                                <li>
+                                    <h3>Address</h3>
+                                    <a>Office 1, Izabella House
+                                        24-26 Regent Place, City Centre
+                                        Birmingham
+                                        B1 3NJ</a>
+                                </li>
+								<li>
 									<h3>Social media</h3>
 									<ul class="icons">
 										<li><a href="https://www.facebook.com/share/1AB4MuVCtB/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
