--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -36,6 +36,7 @@
                                 The rented equipment must be returned to Event Medical Radio Solutions on or before the agreed return date in the condition it was received, subject to reasonable wear and tear.
                                 Failure to return the equipment on time may result in additional rental charges.
                                 Arrangements for collection and return of equipment must be made in advance.
+                                Equipment may be upgraded due to availability of items.
                                 </p>
                                 <p>Please note that Event Medical Radio Solutions is not responsible for any loss or damage as a result of the rented equipment.</p>
 						</div>
@@ -52,6 +53,17 @@
 									<h3>Email</h3>
 									<a href="mailto:information@eventmedicalradiosolutions.co.uk">information@eventmedicalradiosolutions.co.uk</a>
 								</li>
+                                <li>
+                                    <h3>Phone</h3>
+                                    <a href="tel:01217268229">01217268229</a>
+                                </li>
+                                <li>
+                                    <h3>Address</h3>
+                                    <a>Office 1, Izabella House
+                                        24-26 Regent Place, City Centre
+                                        Birmingham
+                                        B1 3NJ</a>
+                                </li>
 								<li>
 									<h3>Social media</h3>
 									<ul class="icons">
